fix: delete double white space from russian text

--- a/src/components/Results/Results.module.css
+++ b/src/components/Results/Results.module.css
@@ -43,3 +43,10 @@
 .result-title {
   font-size: 12px;
 }
+
+@media (max-width: 568px) {
+  .result-value {
+    width: 63px;
+    font-size: 18px;
+  }
+}
