--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -14,4 +14,11 @@
 
 .text {
   font-family: "Roboto";
+  font-size: 20px;
+}
+
+@media (max-width: 568px) {
+  .text {
+    font-size: 16px;
+  }
 }
